project(
    '_2801ict-assignment3',
    [
        'cpp',
        'c'
    ],
    version: '0.1.0',
    meson_version: '>= 0.50.0',
    default_options: [
        'warning_level=3',
        'werror=true',
        'cpp_std=c++17',
        'optimization=3',
    ],
)

executable(
    'k-short',
    's5169483_k_shortest_paths.cpp',
    #'check.cpp',
    install: true)
